# lonelyconnect

./: README.md  pyproject.toml  requirements.txt  tutorial.yml
.github/workflows/: pytest.yml
lonelyconnect/: __init__.py  game.py  models.py  route_ui.py
onlyconnect/: __init__.py  auth.py  game.py  models.py
static/: style.css
templates/: admin.html  buzzer.html  buzzer_inner.html  connections.html  login.html  missing_vowels.html  redirect.html  stage.html
test/: conftest.py  test_api.py  test_game.py  test_models.py  test_ui.py
